--- a/style.css
+++ b/style.css
@@ -26,8 +26,11 @@ html, body {
   top: 50%;
 }
 
-
-
+hr {
+  border: none;
+  height: 2.3px;
+  background-color: #333; /* Modern Browsers */
+}
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
