--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .navbar {
-  padding: .75rem;
+  padding: 1rem;
 }
 
 .navbar-nav li {
@@ -29,8 +29,44 @@ html, body {
 hr {
   border: none;
   height: 2px;
-  width:50%;
+  width:35%;
   background-color: #333; /* Modern Browsers */
+}
+
+footer {
+  background-color: #333;
+  color: white;
+}
+
+footer hr {
+  background-color: white;
+}
+
+.social a {
+  font-size: 4rem;
+  padding: 2.3rem;
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-instagram {
+  color: orangered;
+}
+
+.fa-youtube {
+  color: #bb0000;
+}
+
+.fa-twitter {
+  color: #00aced;
+}
+
+.welcomesection p{
+  font-size: 20px;
+  padding: 10px;
+  
 }
 
 /*---Media Queries --*/
